Refactoring GeoJsonSource creation with URL to URI (#1150)